[package]
edition      = "2024"
name         = "fkm-display"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
  "esp32c3",
  "log-04",
  "unstable",
] }

esp-rtos = { version = "0.1.1", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3"] }
log                    = "0.4.28"

bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.16.0", features = [
  "ble",
  "esp-alloc",
  "esp32c3",
  "log-04",
  "unstable",
] }
trouble-host = { version = "0.5.0", features = ["gatt", "security"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
embassy-sync = "0.7.2"
embedded-storage = "0.3.1"
tickv = "2.0.0"
portable-atomic = "1.11.1"
esp-storage = { version = "0.8.0", features = ["esp32c3"] }
embassy-futures = "0.1.2"
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }
getrandom = { version = "=0.2.15", features = ["custom"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
